--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
@@ -1,15 +1,6 @@
-\input{src/CasiDUso/src/UC-gestioneAutenticazione.tex}
+\subsection{Applicazione Web}\label{sec:AppWeb}
+\input{src/CasiDUso/src/ApplicazioneWeb/main.tex}
 
-\input{src/CasiDUso/src/UC-visualizzazioneProfilo.tex}
+\subsection{Applicazione Mobile}\label{sec:AppMobile}
+\input{src/CasiDUso/src/ApplicazioneMobile/main.tex}
 
-\input{src/CasiDUso/src/UC-modCancProfilo.tex}
-
-\input{src/CasiDUso/src/UC-creazionePrenotazione.tex}
-
-\input{src/CasiDUso/src/UC-statoPostazioni.tex}
-
-\input{src/CasiDUso/src/UC-postazione.tex}
-
-\input{src/CasiDUso/src/UC-stanza.tex}
-
-\input{src/CasiDUso/src/UC-igienizzazionePostazioni.tex}
